[gd_scene load_steps=11 format=3 uid="uid://qqaopl4pymnk"]

[ext_resource type="Theme" uid="uid://cwg84vu8hioik" path="res://assets/themes/vox-mummy.tres" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://bp6lg8p5dgeci" path="res://assets/images/hieroglyphs.png" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://dlkav5jawkidx" path="res://assets/images/mummy-head.svg" id="2_0wfyh"]
[ext_resource type="ButtonGroup" uid="uid://dnjfcnillb7cy" path="res://SideSelect.tres" id="2_sugp2"]
[ext_resource type="Script" uid="uid://cgbh2a4w34s4v" path="res://scripts/main.gd" id="2_tbgi4"]
[ext_resource type="AudioStream" uid="uid://dh1en6djp1k21" path="res://assets/sfx/switch.wav" id="6_tefeu"]

[sub_resource type="Animation" id="Animation_tefeu"]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o6xl0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tipki"]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tipki"]
_data = {
&"Fadein": SubResource("Animation_tefeu"),
&"Fadeout": SubResource("Animation_tipki"),
&"RESET": SubResource("Animation_o6xl0")
}

[node name="Main" type="Control" node_paths=PackedStringArray("select_a", "select_b", "select_ab", "sfx_player", "vox_player", "mummy", "mummy_player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jyhfs")
script = ExtResource("2_tbgi4")
select_a = NodePath("MarginContainer/VBoxContainer/HBoxContainer/SideA")
select_b = NodePath("MarginContainer/VBoxContainer/HBoxContainer/SideB")
select_ab = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Both")
sfx_player = NodePath("SFXPlayer")
vox_player = NodePath("VOXPlayer")
mummy = NodePath("MarginContainer/VBoxContainer/Mummy")
mummy_player = NodePath("MarginContainer/VBoxContainer/Mummy/AnimationPlayer")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.31764707, 0.31764707, 0.31764707, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o5qli")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Mummy Vox"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SideA" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_sugp2")
text = "Side A"

[node name="SideB" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_sugp2")
text = "Side B"

[node name="Both" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_group = ExtResource("2_sugp2")
text = "Side A + Side B"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"
alignment = 0

[node name="SpeakButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "SPEAK"
alignment = 2

[node name="Mummy" type="TextureRect" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_0wfyh")
expand_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Mummy"]
libraries = {
&"": SubResource("AnimationLibrary_tipki")
}

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tefeu")

[node name="VOXPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/SideA" to="." method="_on_side_toggled" binds= ["SIDEA"]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/SideB" to="." method="_on_side_toggled" binds= ["SIDEB"]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/Both" to="." method="_on_side_toggled" binds= ["SIDEAB"]]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Buttons/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Buttons/SpeakButton" to="." method="_on_speak_button_button_down"]
[connection signal="finished" from="VOXPlayer" to="." method="_on_vox_player_finished"]
